Test/errors/err_unique_iface_stack_box.cb
// Stage-4 boxing rule: a `unique` interface local owns a heap object, so it may only be boxed
// from a heap `new` source. Boxing a stack value would need a silent heap-promotion - rejected.
interface IShape { int area(); };
class Circle : IShape { int r = 0; int area() { return r * r; } ~Circle() {} };

expect_error("cannot initialize unique 's' from a borrowed value") {
    void boxStack() { Circle t; unique IShape s = t; }
}

// Assignment leg: stack-boxing into an already-owning `unique` interface local would point the
// owning slot at a stack address that scope-exit teardown then frees (heap corruption) - rejected.
expect_error("cannot assign a borrowed value to unique interface 's'") {
    void boxStackAssign() { unique IShape s = new Circle(); Circle t; s = t; }
}

// Param leg: a `unique` interface param takes ownership and frees at scope exit, so a stack value
// (whose boxed data pointer is a stack address) must not be bound to it.
void sink(unique IShape s) {}
expect_error("cannot pass a stack value to unique interface parameter 's'") {
    void passStack() { Circle t; sink(t); }
}

// A `unique` LOCAL is freed automatically at scope exit; an explicit delete is unnecessary and the
// message is local-specific (not the field wording).
expect_error("cannot delete unique local 's'") {
    void delLocal() { unique IShape s = new Circle(); delete s; }
}

// Move-flow: a `move` inside a loop branch that BREAKS rejoins post-loop code, so the value stays
// maybe-moved - consuming it again after the loop is a use-after-move flagged by the inline checker
// (a returning branch would be fine; only break/continue keep the move alive). The CONTINUE variant
// is covered separately by the loop-carried move-dataflow pass.
expect_error("use of moved variable 'committed'") {
    void loopBreakConsume(move IShape committed, int n) {
        int i = 0;
        while (i < n) { if (i == 3) { sink(committed); break; } i = i + 1; }
        sink(committed);
    }
}

// A genuine straight-line use-after-move must still be flagged even with dead code (a return and a
// trailing statement) later in the function - the dead-code-after-return handling must not suppress
// it.
expect_error("use of moved variable 'committed'") {
    void realUseAfterMove(move IShape committed) {
        sink(committed);
        sink(committed);
        return;
        int dead = 5;
    }
}

// A CONDITIONAL return-block function may fall through (its inner `return` exits the caller only on
// the taken path), so a use-after-move after it must still be flagged - the return-block's inlined
// return must not be treated as an unconditional caller exit.
void rbMaybe(int x) { return { if (x < 0) { return; } }; }
expect_error("use of moved variable 'committed'") {
    void rbFallThroughUseAfterMove(move IShape committed, int c) {
        rbMaybe(c);
        sink(committed);
        sink(committed);
    }
}

extern int main() { return 0; }
